# esp32-s3-synth

./: .gitmodules  CMakeLists.txt  README.md  audio-task-callback.c  audio-task-callback.h  audio-task.c  audio-task.h  audio.h  blink_example_main.c  idf_component.yml  midi-events.c  midi-events.h  plugin-host.c  plugin-host.h  plugins.h  sine-ping.c  sine-ping.h  sound.h  synth-task.c  synth-task.h  synth_main.c  usb-midi-task.c  usb-midi-task.h  usb-midi.c  usb-midi.h  usb_host_port_main.c  usbmidi.c  usbmidi.h
